--- a/newGizaClub/src/pages/landing/landing.html
+++ b/newGizaClub/src/pages/landing/landing.html
@@ -5,10 +5,9 @@
   Ionic pages and navigation.
 -->
 <ion-content padding>
- <ion-slides class="slides" pager="true" parallax="true">
-        <ion-slide *ngFor="let slide of slides">
+ <ion-slides autoplay="3000" loop="true" speed="3000" class="slides" pager="false" parallax="true">
+        <ion-slide *ngFor="let slide of slideImages">
             <img [src]="slide.image" class="slide-image" />
-            <img [src]="logo" class='slide-logo'>
         </ion-slide>
       
     </ion-slides>
