done : phase1 regestration (concepts)

--- a/newGizaClub/src/pages/regestration/regestration.html
+++ b/newGizaClub/src/pages/regestration/regestration.html
@@ -13,6 +13,81 @@
 </ion-header>
 
 
-<ion-content padding>
+<ion-content class="regestration-content" padding>
+  <img src="assets/img/ngiza.png">
+   <form [formGroup]="regesterForm" (ngSubmit)="onRegester()">
+  <ion-grid>
+  <ion-row class="regestration-row">
+    <ion-col col-auto>
+     <ion-icon name="person" class="icon"></ion-icon>
+    </ion-col>
+    <ion-col >
+     <input  type="text"  name="name"  formControlName="name" placeholder="Name" >
+     <div *ngIf="regesterForm.controls['name'].invalid && regesterBefore == true">
+       enter valed name
+     </div>
 
+    </ion-col>
+  </ion-row>
+  <ion-row class="regestration-row">
+    <ion-col col-auto>
+     <ion-icon name="mail" class="icon"></ion-icon>
+    </ion-col>
+    <ion-col >
+     <input  type="text"  name="membership" formControlName="membership" placeholder="membership">
+     <div *ngIf="regesterForm.controls['membership'].invalid && regesterBefore == true">
+       enter valed membership
+     </div>
+
+    </ion-col>
+  </ion-row>
+  <ion-row class="regestration-row">
+    <ion-col col-auto>
+     <ion-icon name="phone-portrait" class="icon"></ion-icon>
+    </ion-col>
+    <ion-col >
+     <input  type="text" name="phone" formControlName="phone" placeholder="Phone Number">
+     <div *ngIf="regesterForm.controls['phone'].invalid && regesterBefore == true">
+       enter valed phone number
+     </div>
+    </ion-col>
+  </ion-row>
+  <ion-row class="regestration-row">
+    <ion-col col-auto>
+     <ion-icon name="mail" class="icon"></ion-icon>
+    </ion-col>
+    <ion-col >
+     <input  type="email" name="email" formControlName="email" placeholder="Email">
+     <div *ngIf="regesterForm.controls['email'].invalid && regesterBefore == true">
+       enter valed email
+     </div>
+    </ion-col>
+  </ion-row>
+  <ion-row class="regestration-row">
+    <ion-col col-auto>
+     <ion-icon name="lock" class="icon"></ion-icon>
+    </ion-col>
+    <ion-col >
+     <input type="password"  name="password" formControlName="password" placeholder="password">
+     <div *ngIf="regesterForm.controls['password'].invalid && regesterBefore == true">
+       enter valed password
+     </div>
+    </ion-col>
+  </ion-row>
+  <ion-row class="regestration-row">
+    <ion-col col-auto>
+     <ion-icon name="lock" class="icon"></ion-icon>
+    </ion-col>
+    <ion-col >
+     <input type="password"  name="Rpassword" formControlName="Rpassword" placeholder="Confirm Password">
+     <div *ngIf="regesterForm.value.password != regesterForm.value.Rpassword && regesterBefore == true">
+       enter valed membership
+     </div>
+    </ion-col>
+  </ion-row>
+  <ion-row>
+      <button ion-button type="submit" class="regestration-bottom" block>Sign up</button>
+  </ion-row>
+  </ion-grid>
+   </form>
 </ion-content>
