added : phase1 forgot password page finished : phase 1 login page

--- a/newGizaClub/src/pages/login/login.html
+++ b/newGizaClub/src/pages/login/login.html
@@ -17,33 +17,46 @@
   <img src="assets/img/ngiza.png">
    <form [formGroup]="loginForm" (ngSubmit)="onLogin()">
   <ion-grid>
-  <ion-row class="regestration-row">
-    <ion-col col-auto>
+  <ion-row class="reg-input-row">
+    <ion-col col-3>
      <ion-icon name="mail" class="icon"></ion-icon>
     </ion-col>
     <ion-col >
-     <input  type="text"  name="email"  formControlName="email" placeholder="email" >
+     <ion-input  type="text"  name="email"  formControlName="email" placeholder="Email" ></ion-input>
      <div *ngIf="loginForm.controls['email'].invalid && loginBefore == true">
        enter valed email
      </div>
 
     </ion-col>
   </ion-row>
-  <ion-row class="regestration-row">
-    <ion-col col-auto>
+  <ion-row class="reg-input-row">
+    <ion-col col-3>
      <ion-icon name="lock" class="icon"></ion-icon>
     </ion-col>
     <ion-col >
-     <input  type="password"  name="password" formControlName="password" placeholder="password">
+     <ion-input  type="password"  name="password" formControlName="password" placeholder="Password"></ion-input>
      <div *ngIf="loginForm.controls['password'].invalid && loginBefore == true">
        enter valed password
      </div>
 
     </ion-col>
   </ion-row>
-  <ion-row>
-      <button ion-button type="submit" class="regestration-bottom" block>Sign in</button>
+  <ion-row class="fp-row">
+    <div class="fp-container">
+     <button ion-button class="fp-Button" (click)="pushPage(this.pages['fp'])">Forgot Password? </button>
+    </div>
+  </ion-row>
+  
+  <ion-row class="registration-row">
+      <button ion-button type="submit" class="registration-button" block>Sign in</button>
   </ion-row>
   </ion-grid>
    </form>
+   <ion-row>
+       <label class="registration-label">Dont have account</label>
+   </ion-row>
+   <ion-row>
+     <button ion-button class="sign-up-button" (click)="pushPage(this.pages['rg'])">Sign up</button>
+   </ion-row>
+  
 </ion-content>
