added empty profile page

--- a/newGizaClub/src/pages/regestration/regestration.html
+++ b/newGizaClub/src/pages/regestration/regestration.html
@@ -17,7 +17,7 @@
 
 
 <ion-content class="regestration-content" padding>
-  <img src="assets/img/ngiza.png">
+  <img class="round-img" src="assets/img/ngiza.png" style="border-radius: 100%;">
    <form [formGroup]="regesterForm" (ngSubmit)="onRegester()">
   <ion-grid>
   <ion-row class="regestration-row">
