added notification tab , master plan page

--- a/newGizaClub/src/pages/forgetpw/forgetpw.html
+++ b/newGizaClub/src/pages/forgetpw/forgetpw.html
@@ -7,14 +7,14 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>forgetpw</ion-title>
+    <ion-title class="title">forgetpw</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding class="fp-content">
-  <img src="assets/img/ngiza.png">
+  <img class="round-img" src="assets/img/ngiza.png">
   <ion-row class="fp-reset-row">
 <label class="fp-reset-label">Forgot your password ?</label>
 <br>
