--- a/newGizaClub/src/pages/login/login.html
+++ b/newGizaClub/src/pages/login/login.html
@@ -17,7 +17,7 @@
 
 
 <ion-content padding class="login-content">
-  <img class="round-img"src="assets/img/ngiza.png" style="border-radius: 100%;">
+  <img class="round-img"src="assets/img/ngiza.png" >
    <form [formGroup]="loginForm" (ngSubmit)="onLogin()">
   <ion-grid>
   <ion-row class="reg-input-row">
