--- a/newGizaClub/src/pages/notifications/notifications.html
+++ b/newGizaClub/src/pages/notifications/notifications.html
@@ -14,5 +14,10 @@
 
 
 <ion-content padding>
+<ion-tabs>
+  <ion-tab [root]="tab1Root" tabTitle="Home" tabIcon="home"></ion-tab>
+  <ion-tab [root]="tab2Root" tabTitle="About" tabIcon="information-circle"></ion-tab>
+  <ion-tab [root]="tab3Root" tabTitle="Contact" tabIcon="contacts"></ion-tab>
+</ion-tabs>
 
 </ion-content>
