--- a/newGizaClub/src/pages/masterplan/masterplan.html
+++ b/newGizaClub/src/pages/masterplan/masterplan.html
@@ -9,11 +9,39 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title class="title">MasterPlan</ion-title>
+    <ion-title class="title">General Plan</ion-title>
   </ion-navbar>
 </ion-header>
 
 
 <ion-content padding>
-<img src="../../assets/img/masterplan.png">
+  <ion-row>
+<img src="../../assets/img/masterplan.jpg" (click)="zoom()">
+  </ion-row>
+  <ion-row>
+<ol type="1">
+  <li>The Grand Lodge</li>
+  <li>Administration Building</li>
+  <li>Mosque</li>
+  <li>Sales Office</li>
+  <li>Gymnastics Hall</li>
+  <li>Gym</li>
+  <li>Football Field</li>
+  <li>Tennis Complex</li>
+  <li>Bricklane</li>
+  <li>Swimming Complex</li>
+  <li>Squash Complex</li>
+  <li>Skate Park</li>
+  <li>Kids Temple</li>
+  <li>Water Park</li>
+  <li>Beach Volleyball</li>
+  <li>Greenheart Park</li>
+  <li>Seniors Outdoor Fitness Area</li>
+  <li>Multi-purpose court</li>
+  <li>Paddle Tennis</li>
+  <li>The blue lodge</li>
+  
+</ol>
+  </ion-row>
+
 </ion-content>
