update : updated the home page

--- a/newGizaClub/src/pages/masterplan/masterplan.html
+++ b/newGizaClub/src/pages/masterplan/masterplan.html
@@ -16,7 +16,7 @@
 
 <ion-content padding>
   <ion-row>
-<img src="../../assets/img/masterplan.jpg" (click)="zoom()">
+<img src="assets/img/masterplan.jpg" (click)="zoom()">
   </ion-row>
   <ion-row>
 <ol type="1">
