--- a/newGizaClub/src/pages/home/home.html
+++ b/newGizaClub/src/pages/home/home.html
@@ -8,57 +8,37 @@
 </ion-header>
 
 <ion-content padding>
-  
-  <ion-scroll scrollY="true" style="height: 33%;">
+   <ion-scroll scrollY="true" style="height: 40%;">
+  <ion-list>   
+   
     <ion-row class="notif-row">
     <ion-col col-8 class="notif-col">
-    <h3>Notifications</h3>
-    </ion-col >
-  <ion-col col-auto> 
-    <button class="home-buttons" (click)="goToNotifications()">view all >></button>
-  </ion-col >
+    <h3>Sports</h3>
+    </ion-col>
     </ion-row>
-    <ion-list>
-      <ion-grid>
-        <ion-item  *ngFor="let item of Notifications" (tap)="openNotifcation()">
-            
-            <ion-row>
-              <ion-col col-auto>
-                  <ion-icon class="notif-icon" name="disc"></ion-icon>
-              </ion-col>
-              <ion-col class="notif=title-col">
-                <span class="notif-title">
-                {{item.title}}
-                </span>
-              </ion-col>
-              <ion-col>
-                <div class="notif-time">
-                {{item.time}}
-                </div>
-              </ion-col>
-            </ion-row>
-            <ion-row>
-              <ion-col class="notif-description">
-                {{item.description}}
-              </ion-col>
-            </ion-row>
-            
-        </ion-item>
-        </ion-grid>
-    </ion-list>
+  <ion-item *ngFor="let item of sports">
+    <ion-thumbnail item-start>
+      <img [src]="item.imageUrl">
+    </ion-thumbnail>
+    <h2>{{item.title}}</h2>
+    <button ion-button clear item-end (click)="goTopage(item)">View</button>
+  </ion-item>
+</ion-list>
 </ion-scroll>
-<ion-row class="notif-row">
-    <ion-col col-8 class="notif-col">
-    <h3>Events</h3>
-    </ion-col >
-  <ion-col col-auto> 
-    <button class="home-buttons" (click)="goToEvents()">view all >></button>
-  </ion-col >
-    </ion-row>
- <ion-slides  loop="true"  pager="true" parallax="true" style="height: 33%;">
-    <ion-slide *ngFor="let slide of events">
-      <img class="event-img" [src]="slide.imageUrl"/>
 
-    </ion-slide>
- </ion-slides>
+<ion-scroll scrollY="true" style="height: 40%;">
+  <ion-list>   
+   
+    <ion-row class="notif-row">
+    <ion-col col-8 class="notif-col">
+    <h3>FACILITIES</h3>
+    </ion-col>
+    </ion-row>
+  <ion-item *ngFor="let item of facilities">
+    <h2>{{item.title}}</h2>
+    <button ion-button clear item-end (click)="goTopage(item)">View</button>
+  </ion-item>
+</ion-list>
+</ion-scroll>
+
 </ion-content>
