add : added about us page

--- a/newGizaClub/src/pages/about/about.html
+++ b/newGizaClub/src/pages/about/about.html
@@ -1,11 +1,51 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>
-      About
-    </ion-title>
+    <button ion-button menuToggle>
+      <ion-icon name="menu"></ion-icon>
+    </button>
+    <ion-title class="title">About Us</ion-title>
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
+<ion-content padding class="about-container">
+  <h3 class="about-header">PHILOSOPHY</h3>
+  <p class="about-text">NGSC is driven by three core pillars: Social, Sports and Leisure. The
+Social pillar is run by the full-fledge of sports facilities and buildings
+that integrate the members within a community of shared
+interest and common values. The Sports pillar is powered by
+providing unparalleled facilities to power the member’s physical
+and mental wellbeing. Whereas, the Leisure pillar is evident
+in the club’s wide-range of tranquil and dynamic recreational
+experiences.<br><br>
+Recreation is about activities and experiences which
+produce feelings of joy and satisfaction. They offer
+opportunities to express creativity as well as achieve
+and master new skills.<br><br>
+Innovation is key to NGSC’s philosophy, which
+boasts it as the number one hub with progressive,
+cutting-edge facilities that are regularly maintained
+and upgraded, as well as state-of-the-art
+programs and activities that cater to all ages,
+especially children.<br><br>
+Driven by a strong belief that kids shape
+future generations, we strive to stimulate
+their mental and physical growths by
+activating and boosting their young
+minds and bodies through an array of
+programs and activities. Accordingly,
+we encourage our children to power
+through and contribute as competitive
+individuals and champions
+for centuries to come.</p>
+<br>
+<br>
+<h3 class="about-header">Vision</h3>
+<p class="about-text">NGSC aims to provide a holistic social, sports and
+leisure experience that caters to athletic and recreational
+aspirations. By offering the most suitable
+conditions to power the mind, body and soul,
+and stimulate human growth, NGSC envisions to
+become the destination hub for the residents of
+NEWGIZA Town and west of Cairo.</p>
 
 </ion-content>
