update : updated home page and about us page

--- a/newGizaClub/src/pages/about/about.html
+++ b/newGizaClub/src/pages/about/about.html
@@ -8,44 +8,39 @@
 </ion-header>
 
 <ion-content padding class="about-container">
-  <h3 class="about-header">PHILOSOPHY</h3>
-  <p class="about-text">NGSC is driven by three core pillars: Social, Sports and Leisure. The
-Social pillar is run by the full-fledge of sports facilities and buildings
-that integrate the members within a community of shared
-interest and common values. The Sports pillar is powered by
-providing unparalleled facilities to power the member’s physical
-and mental wellbeing. Whereas, the Leisure pillar is evident
-in the club’s wide-range of tranquil and dynamic recreational
-experiences.<br><br>
-Recreation is about activities and experiences which
-produce feelings of joy and satisfaction. They offer
-opportunities to express creativity as well as achieve
-and master new skills.<br><br>
-Innovation is key to NGSC’s philosophy, which
-boasts it as the number one hub with progressive,
-cutting-edge facilities that are regularly maintained
-and upgraded, as well as state-of-the-art
-programs and activities that cater to all ages,
-especially children.<br><br>
-Driven by a strong belief that kids shape
-future generations, we strive to stimulate
-their mental and physical growths by
-activating and boosting their young
-minds and bodies through an array of
-programs and activities. Accordingly,
-we encourage our children to power
-through and contribute as competitive
-individuals and champions
-for centuries to come.</p>
-<br>
-<br>
-<h3 class="about-header">Vision</h3>
-<p class="about-text">NGSC aims to provide a holistic social, sports and
-leisure experience that caters to athletic and recreational
-aspirations. By offering the most suitable
-conditions to power the mind, body and soul,
-and stimulate human growth, NGSC envisions to
-become the destination hub for the residents of
-NEWGIZA Town and west of Cairo.</p>
-
+  <div class="about-text-container">
+  <p class="about-text">One of the most integral cores of the NEWGIZA community
+is the NEWGIZA Sports Club (NGSC). Offering leisure, recreational
+and sport activities, NGSC welcomes both residents and
+non-residents into its integrated sports complex and caters to
+all ages and levels of fitness. With a wide range of world-class
+facilities and services to choose from, NGSC will act as both a
+social and sporting hub.<br><br>
+One thing about NGSC – there is never a dull moment. The club
+boasts of an array of activities for all occasions. You can get to
+know your neighbors in the Blue Lodge, or work out the stress
+of the day either at the Greenheart Park or the gym. Then again,
+while you take a few laps in the swimming pool, or thrash it out
+on the squash courts, your children can find themselves busy
+and mingling with friends at the Kids Temple or the adjoining
+football field.<br><br>
+Running a healthy lifestyle is vital to us at NGSC, hence we have
+carefully designed activities and different areas tailored to each
+age group. An outdoor fitness area is especially dedicated for
+adults and seniors, who can enjoy an exclusive workout amidst
+an age-restricted area in the Greenheart Park, overlooking the
+splendid view of the vast green fields.<br><br>
+NGSC also holds children in high regard by dedicating special
+programs and activities that suit their interest. The Kids
+Temple is the largest and most ultimate kid’s park in the 6th of
+October area that features a state-of-the-art waterpark as well
+as both a play and birthday area that are fully-furnished by a
+world-class signature brand for kid’s area structures.
+The Grand Lodge invites its members to a calmer setting, with
+quality signature restaurants, a tea garden, salons for get-togethers,
+a conference room and additional entertainment facilities,
+making NGSC an exceptional community and sports venue
+for children, adult and senior members.
+  </p>
+  </div>
 </ion-content>
