--- a/newGizaClub/src/pages/sports/sports.html
+++ b/newGizaClub/src/pages/sports/sports.html
@@ -17,7 +17,7 @@
   <div *ngIf="sport.imageUrl">
   <img class="round-img"[src]="sport.imageUrl">
   </div>
-  <div class="sport-des">
-  <p>{{sport.description}}</p>
+  <div class="item-text-container">
+  <p class="item-text">{{sport.description}}</p>
   </div>
 </ion-content>
