new android.apk version

--- a/newGizaClub/src/pages/profile/profile.html
+++ b/newGizaClub/src/pages/profile/profile.html
@@ -14,7 +14,7 @@
   </ion-navbar>
 
   <ion-toolbar >
-    <ion-segment [(ngModel)]="segment" color="secondary" ">
+    <ion-segment [(ngModel)]="segment" color="secondary" >
       <ion-segment-button value="info" class="profile-segment-button"  >
        info
       </ion-segment-button>
