--- a/newGizaClub/src/pages/regestration/regestration.html
+++ b/newGizaClub/src/pages/regestration/regestration.html
@@ -34,7 +34,7 @@
   </ion-row>
   <ion-row class="regestration-row">
     <ion-col col-3>
-     <ion-icon name="mail" class="icon"></ion-icon>
+     <ion-icon name="card" class="icon"></ion-icon>
     </ion-col>
     <ion-col >
      <ion-input  type="text"  name="membership" formControlName="membership" placeholder="membership"></ion-input>
