added : notifications page layout  & new vertion of app.apk

--- a/newGizaClub/src/pages/sports/sports.html
+++ b/newGizaClub/src/pages/sports/sports.html
@@ -20,4 +20,7 @@
   <div class="item-text-container">
   <p class="item-text">{{sport.description}}</p>
   </div>
+  <div>
+     <button ion-button class="fp-Button" (click)="open()">Test Noifications layout </button>
+    </div>
 </ion-content>
