--- a/newGizaClub/src/pages/notifications/notifications.html
+++ b/newGizaClub/src/pages/notifications/notifications.html
@@ -14,10 +14,37 @@
 
 
 <ion-content padding>
-<ion-tabs>
-  <ion-tab [root]="tab1Root" tabTitle="Home" tabIcon="home"></ion-tab>
-  <ion-tab [root]="tab2Root" tabTitle="About" tabIcon="information-circle"></ion-tab>
-  <ion-tab [root]="tab3Root" tabTitle="Contact" tabIcon="contacts"></ion-tab>
-</ion-tabs>
+<ion-row>
+  <ion-col >
+    <img src="assets/img/ngiza.png">
+  </ion-col>
+  <ion-col>
+    <div class="notification-header" > {{sport.title}}</div>
+  </ion-col>
+  <ion-col>
+    <img [src]="sport.imageUrl">
+  </ion-col>
+</ion-row>
+<div class="item-text-container">
+  {{sport.description}}
+</div>
+<div>
+  <ion-row class="bottom-notif-add">
+    <ion-col col-2>
+      <img src="assets/img/orangelogo.png">
+
+    </ion-col>
+      <ion-col col-7>
+        <div>
+      <img src="assets/img/clubadd.png">
+      </div>
+      </ion-col>
+        <ion-col col-2>
+          <div>
+          <img src="assets/img/adidaslogo.png">
+          </div>
+        </ion-col>
+  </ion-row>
+</div>
 
 </ion-content>
