updated from angular2 & ionic 2 to angular4 & ionic 3

--- a/newGizaClub/src/pages/notifications/notifications.html
+++ b/newGizaClub/src/pages/notifications/notifications.html
@@ -19,30 +19,27 @@
     <img src="assets/img/ngiza.png">
   </ion-col>
   <ion-col>
-    <div class="notification-header" > {{sport.title}}</div>
+    
   </ion-col>
   <ion-col>
     <img [src]="sport.imageUrl">
   </ion-col>
 </ion-row>
+<div class="notification-header" > {{sport.title}}</div>
 <div class="item-text-container">
   {{sport.description}}
 </div>
 <div>
   <ion-row class="bottom-notif-add">
-    <ion-col col-2>
+    <ion-col>
       <img src="assets/img/orangelogo.png">
 
     </ion-col>
       <ion-col col-7>
-        <div>
       <img src="assets/img/clubadd.png">
-      </div>
       </ion-col>
-        <ion-col col-2>
-          <div>
+        <ion-col >
           <img src="assets/img/adidaslogo.png">
-          </div>
         </ion-col>
   </ion-row>
 </div>
