added Dinamicly change the root page based on user status

--- a/newGizaClub/src/pages/home/home.html
+++ b/newGizaClub/src/pages/home/home.html
@@ -1,5 +1,6 @@
 <ion-tabs>
   <ion-tab [root]="sports" tabTitle="sports" tabIcon="home"></ion-tab>
   <ion-tab [root]="facilities" tabTitle="facilities" tabIcon="home"></ion-tab>
-  <ion-tab   [root]="interact" tabTitle="interact" tabIcon="home"></ion-tab>
+  <ion-tab  [root]="interact" tabTitle="interact" tabIcon="home"></ion-tab>
+  <ion-tab  [root]="resturants" tabTitle="resturants" tabIcon="home"></ion-tab>
 </ion-tabs>
