--- a/newGizaClub/src/pages/login/login.html
+++ b/newGizaClub/src/pages/login/login.html
@@ -25,7 +25,7 @@
      <ion-icon name="mail" class="icon"></ion-icon>
     </ion-col>
     <ion-col >
-     <ion-input  type="text"  name="email"  formControlName="email" placeholder="Email" ></ion-input>
+     <ion-input  type="email"  name="email"  formControlName="email" placeholder="Email" ></ion-input>
      <div *ngIf="loginForm.controls['email'].invalid && loginBefore == true">
        enter valed email
      </div>
