--- a/newGizaClub/src/pages/regestration/regestration.html
+++ b/newGizaClub/src/pages/regestration/regestration.html
@@ -50,7 +50,7 @@
     <ion-col >
      <ion-input type="password"  name="Rpassword" formControlName="Rpassword" placeholder="Confirm Password"></ion-input>
      <div *ngIf="regesterForm.value.password != regesterForm.value.Rpassword && regesterBefore == true">
-       enter valed membership
+       paswords do not match
      </div>
     </ion-col>
   </ion-row>
