update :          Reformated the header

--- a/newGizaClub/src/pages/about/about.html
+++ b/newGizaClub/src/pages/about/about.html
@@ -1,12 +1,6 @@
 <ion-header>
-  <ion-navbar>
-    <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
-    </button>
-    <ion-title class="title">About Us</ion-title>
-  </ion-navbar>
+<ngsc-header [name]='name'></ngsc-header>
 </ion-header>
-
 <ion-content padding class="about-container">
   <div class="about-text-container">
   <p class="about-text">One of the most integral cores of the NEWGIZA community
