--- a/newGizaClub/src/pages/sports/sports.html
+++ b/newGizaClub/src/pages/sports/sports.html
@@ -6,9 +6,7 @@
 -->
 <ion-header>
 
-  <ion-navbar>
-    <ion-title>{{sport.title}}</ion-title>
-  </ion-navbar>
+  <ngsc-header [name]='sport.title'></ngsc-header>
 
 </ion-header>
 
