--- a/newGizaClub/src/pages/allevents/allevents.html
+++ b/newGizaClub/src/pages/allevents/allevents.html
@@ -5,13 +5,8 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-
-  <ion-navbar>
-    <ion-title>allevents</ion-title>
-  </ion-navbar>
-
-</ion-header>
-
+<ngsc-header [name]='name'></ngsc-header>
+<ion-header>
 
 <ion-content padding>
 
