--- a/newGizaClub/src/pages/contact/contact.html
+++ b/newGizaClub/src/pages/contact/contact.html
@@ -1,11 +1,7 @@
-<ion-header>
-  <ion-navbar>
-    <ion-title>
-      Contact
-    </ion-title>
-  </ion-navbar>
-</ion-header>
-
+<header>
+<ngsc-header [name]='name'></ngsc-header>
+<header>
+  
 <ion-content>
   <ion-list>
     <ion-list-header>Follow us on Twitter</ion-list-header>
