--- a/newGizaClub/src/pages/event/event.html
+++ b/newGizaClub/src/pages/event/event.html
@@ -4,14 +4,9 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
-
-  <ion-navbar>
-    <ion-title>event</ion-title>
-  </ion-navbar>
-
-</ion-header>
-
+<header>
+<ngsc-header [name]='name'></ngsc-header>
+</header>
 
 <ion-content padding>
 
