--- a/newGizaClub/src/pages/facilitieslist/facilitieslist.html
+++ b/newGizaClub/src/pages/facilitieslist/facilitieslist.html
@@ -5,14 +5,8 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-  <ion-navbar>
-    <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
-    </button>
-    <ion-title class="title">FACILITIES</ion-title>
-  </ion-navbar>
+<ngsc-header [name]='name'></ngsc-header>
 </ion-header>
-
 
 <ion-content padding>
   <ion-list>
