--- a/newGizaClub/src/pages/forgetpw/forgetpw.html
+++ b/newGizaClub/src/pages/forgetpw/forgetpw.html
@@ -5,11 +5,7 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-
-  <ion-navbar>
-    <ion-title class="title">forgetpw</ion-title>
-  </ion-navbar>
-
+<ngsc-header [name]='name'></ngsc-header>
 </ion-header>
 
 
