--- a/newGizaClub/src/pages/login/login.html
+++ b/newGizaClub/src/pages/login/login.html
@@ -5,14 +5,7 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-
-  <ion-navbar>
-    <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
-    </button>
-    <ion-title>login</ion-title>
-  </ion-navbar>
-
+<ngsc-header [name]='name'></ngsc-header>
 </ion-header>
 
 
