--- a/newGizaClub/src/pages/masterplan/masterplan.html
+++ b/newGizaClub/src/pages/masterplan/masterplan.html
@@ -5,12 +5,7 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-  <ion-navbar>
-    <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
-    </button>
-    <ion-title class="title">General Plan</ion-title>
-  </ion-navbar>
+  <ngsc-header [name]='name'></ngsc-header>
 </ion-header>
 
 
