--- a/newGizaClub/src/pages/philosophy/philosophy.html
+++ b/newGizaClub/src/pages/philosophy/philosophy.html
@@ -5,12 +5,7 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-  <ion-navbar>
-    <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
-    </button>
-    <ion-title class="title">Philosophy</ion-title>
-  </ion-navbar>
+<ngsc-header [name]='name'></ngsc-header>
 </ion-header>
 
 
