--- a/newGizaClub/src/pages/resturants/resturants.html
+++ b/newGizaClub/src/pages/resturants/resturants.html
@@ -6,12 +6,7 @@
 -->
 <ion-header>
 
-  <ion-navbar>
-    <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
-    </button>
-    <ion-title>Resturants</ion-title>
-  </ion-navbar>
+  <ngsc-header [name]='name'></ngsc-header>
 
 </ion-header>
 
