--- a/newGizaClub/src/pages/vision/vision.html
+++ b/newGizaClub/src/pages/vision/vision.html
@@ -5,12 +5,8 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-  <ion-navbar>
-    <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
-    </button>
-    <ion-title class="title">Vision</ion-title>
-  </ion-navbar>
+  <ngsc-header [name]='name'></ngsc-header>
+
 </ion-header>
 
 <ion-content padding class="about-container">
