--- a/newGizaClub/src/pages/interact/interact.html
+++ b/newGizaClub/src/pages/interact/interact.html
@@ -1,9 +1,14 @@
 
-<ion-content  class="interact-body">
-
+<ion-content fullscreen class="interact-body">
+    <div class="image-div-wrapper"></div>
+<div class="image-div" auto>
+    
+    </div>
+<div class="image-div-wrapper"></div>
 <ion-fab right bottom>
     <button ion-fab color="primary" (click)="takePicture()">
         <ion-icon name="md-camera"></ion-icon>
     </button>
 </ion-fab>
+
 </ion-content>
