update the home view

--- a/newGizaClub/src/pages/codeverification/codeverification.html
+++ b/newGizaClub/src/pages/codeverification/codeverification.html
@@ -16,7 +16,8 @@
     </ion-col>
   </ion-row>
      <ion-row>
-      <button ion-button type="submit" class="regestration-bottom" (click)="sendCode()" block>submit</button>
+       <ion-col><button ion-button  class="regestration-bottom" (click)="requestCode()" block>requestCode</button></ion-col>
+      <ion-col><button ion-button type="submit" class="regestration-bottom" (click)="sendCode()" block>submit</button></ion-col>
   </ion-row>
 
 </ion-content>
