--- a/newGizaClub/src/pages/home/home.html
+++ b/newGizaClub/src/pages/home/home.html
@@ -1,4 +1,5 @@
 <ion-tabs>
+  <ion-tab  [root]="main" tabTitle="main" tabIcon="home"></ion-tab>
   <ion-tab [root]="news" tabTitle='news' tabIcon="home"></ion-tab>
   <ion-tab [root]="sports" tabTitle="sports" tabIcon="home"></ion-tab>
   <ion-tab [root]="facilities" tabTitle="facilities" tabIcon="home"></ion-tab>
