--- a/newGizaClub/src/pages/regestration/regestration.html
+++ b/newGizaClub/src/pages/regestration/regestration.html
@@ -4,7 +4,11 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-
+<ion-header>
+  <ion-navbar>
+    <ion-title class="title">Regestration</ion-title>
+    </ion-navbar>
+</ion-header>
 
 <ion-content class="regestration-content" padding>
   <img class="round-img" src="assets/img/ngiza.png">
@@ -16,14 +20,14 @@
      <ion-icon name="mail" class="icon"></ion-icon>
     </ion-col>
     <ion-col >
-     <ion-input  type="email" name="email" formControlName="email" placeholder="Email"></ion-input>
-     <div *ngIf="regesterForm.controls['email'].invalid && regesterBefore == true">
-       enter valed email
+     <ion-input  type="text" name="phone" formControlName="phone" placeholder="enter you phone number"></ion-input>
+     <div *ngIf="regesterForm.controls['phone'].invalid && regesterBefore == true">
+       enter valed phone
      </div>
     </ion-col>
   </ion-row>
   <ion-row>
-      <button ion-button type="submit" class="regestration-bottom" block>Sign up</button>
+      <button ion-button type="submit" class="regestration-bottom" block>send me code</button>
   </ion-row>
   </ion-grid>
    </form>
